--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.394.0",
+    "net": "^1.0.2",
     "next": "14.2.3",
     "nookies": "^2.5.2",
     "react": "^18",
@@ -30,6 +31,8 @@
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tls": "^0.0.1",
+    "ws": "^8.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
